# markv0

./: .gitignore  README.md  new.md
designs/: notes.md
designs/eBPF/: Makefile  go.mod  int.sh  kern.sh  monitor.sh
designs/eBPF/clib/: common_user.h
designs/eBPF/continuous_burst_network/: int.sh  main.go  random.sh  random2.sh  stats.csv
designs/eBPF/continuous_traffic/: main.go  stats.csv  total.py  updated_net_dropped.py
designs/eBPF/ip_cont/: main.go  stats.csv  stats.go
designs/eBPF/mmpp_k_sources/: bpf_log.sh  dots.py  line.py  main.go  stats.csv  updated.py
designs/eBPF/random_early_detection/: main.go  stats.csv
designs/eBPF/random_early_detection_user/: go.mod  stats.csv  updated_net.py
designs/eBPF/self_similar_mock/: main.go
designs/tun0/: Cargo.toml  nc.sh
designs/tun0/src/: lib.rs  main.rs  tcp.rs  udp.rs  utils.rs
pktgen/xdp/: kern.c
pktsniff/ebpf/: Readme.md  kern.ll  markov.c  markov.ll
pktsniff/ebpf/user/: go.mod  main.go
pktsniff/go_tun/: go.mod
pktsniff/mark42/: go.mod  go.sum  main.go
pktsniff/mark42/command/: arp.go  config.go  config_test.go  docker.go  docker_test.go  elastic.go  elastic_test.go  icmp.go  root.go  socks.go  tcp.go  tcp_fin.go  tcp_null.go  udp.go  (+4 more)
pktsniff/pnet/: Cargo.toml  config.toml
pktsniff/pnet/src/: config.rs  main.rs  tcp.rs
pktsniff/tun0/: Cargo.toml
pktsniff/xdp/: Makefile  common.h  common_user.h  kern.c  kern.ll  parsers.h  run.sh  swap.h
testing/: n.py
testing/ns3/: Readme.md  early_burst_simulation.cc  random_burst_traffic_simulation.cc  tcp_bottleneck.cc  tcp_conn.cc  udp.cc
(+151 files in other folders)
