[package]
name = "pnet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify-rust = "4.11.1"
pcap = "2.1.0"
pnet = "0.35"
serde = { version = "1.0.209", features = ["derive"] }
terminal = "0.2.1"
toml = "0.8.19"
